# splay

./: .gitignore  Cargo.toml  README.md  config.toml  db.csv  testing
.github/workflows/: rust.yml
src/: main.rs
src/input/: keybinds.rs  mod.rs
src/metadata/: album.rs  artist.rs  playlist.rs  song.rs
src/player/: mod.rs  output.rs  rodio_player.rs  symphonia_player.rs
src/queue/: mod.rs  song_queue.rs
src/state/: mod.rs
src/ui/: input.rs  mod.rs
src/ui/widgets/: curr_playing_bar.rs  mod.rs  search_popup.rs  stateful_list.rs
src/utils/: constants.rs  types.rs
