[package]
name = "tarvrs-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "0.23"
lofty = "0.3.3"
multimap = "0.8.3"
csv = "1.1"
bincode = "1.3.3"
serde = { version = "1.0.133", features = ["derive"] }
log = "0.4"
simplelog = "0.11.2"
rodio = "0.14.0"
symphonia = { version = "0.5.0", features = [ "mp3"]} # TODO: add FLAC, AAC
cpal = "0.13.5"
rb = "0.3.2"
thiserror = "1.0.31"
